Oura integration mobile view fixes

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -366,4 +366,27 @@
         margin-bottom: 4px;
         text-align: center;
     }
+
+    .ouraContainer {
+        width: 100%;
+    }
+
+    .ouraDescription {
+        margin-bottom: 16px;
+    }
+
+    .footerText {
+        position: unset;
+        margin-top: 32px;
+    }
+
+    .ouraScore {
+        font-size: 18px;
+        margin: 16px 0 8px;
+    }
+
+    .ouraScoreSub {
+        font-size: 14px;
+        margin: 0 0 8px;
+    }
 }
